<resources>
    <string name="app_name">Infinity Weddings</string>
    <!--Common Strings-->
    <string name="login">Log in</string>
    <string name="Signup">Sign up</string>
    <string name="singupWithGoogle">Sign in with google</string>
    <!--Home page strings-->
    <string name="homePageHead">All your wedding needs in \n one place</string>
    <string name="homePageWelcome">Welcome</string>
    <!--Login Page Strings-->
    <string name="loginHintUsername">Username</string>
    <string name="loginHintPassword">password</string>
    <string name="loginWarningMessage">Log in is only to be used by the administrator</string>
    <!--Admin Dashboard Bottom Nav Menu-->
    <string name="adminDBoardBottomNavMenuHome">Home</string>
    <string name="adminDBoardBottomNavMenuNotification">Notification</string>
    <string name="adminDBoardBottomNavMenuAdd">Add</string>
    <string name="adminDBoardBottomNavMenuSettings">Settings</string>
    <!--Admin Dashboard Home Fragment-->
    <string name="adminDashboardHomeFragmentSampleGreeting">Welcome</string>
    <!--Admin Dashboard All Hotels-->
    <string name="adminDashboardAllHotelsSampleName">Sample Hotel Name</string>
    <!--Admin Dashboard Add Hotels-->
    <string name="adminDashboardAddHotelHeading">Add A New Hotel</string>
    <string name="adminDashboardAddHotelName">Hotel Name</string>
    <string name="adminDashboardAddHotelAddress">Hotel Address</string>
    <string name="adminDashboardAddHotelImageUrl">Preview Image URL</string>
    <string name="adminDashboardAddHotelRating">Hotel Rating</string>
    <string name="adminDashboardAddHotelAbout">Description</string>
    <!--Admin Dashboard Add Hotels-->
    <string name="adminDashboardUpdateHotelHeading">Update the Hotel</string>
    <string name="adminDashboardUpdateHotelSubmitButton">Update</string>
    <string name="adminDashboardUpdateHotelDeleteButton">Delete</string>
    <!--Admin Dashboard Notifications -->
    <string name="adminNotificationOne">You have a meeting at 7PM today</string>
    <string name="adminNotificationTwo">A request for a booking has been received</string>
    <string name="adminNotificationThree">Please check the privacy policy of your firebase realtime database</string>
    <string name="adminNotificationFour">Google has new recommendations for you</string>


</resources>