<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/admin_dashboard_bottom_nav_menu_home"
        android:title="@string/adminDBoardBottomNavMenuHome"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item android:id="@+id/admin_dashboard_bottom_nav_menu_categories"
        android:title="@string/adminDBoardBottomNavMenuCategories"
        android:icon="@drawable/ic_baseline_category_24"/>
    <item android:id="@+id/admin_dashboard_bottom_nav_menu_notification"
        android:title="@string/adminDBoardBottomNavMenuNotification"
        android:icon="@drawable/ic_baseline_notifications_24"/>
    <item android:id="@+id/admin_dashboard_bottom_nav_menu_settings"
        android:title="@string/adminDBoardBottomNavMenuSettings"
        android:icon="@drawable/ic_baseline_settings_24"/>
</menu>